...
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/ubi4_touch_aria_close" />

            <TextView
                android:id="@+id/close_threshold_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignStart="@+id/touch_aria_close"
                android:layout_alignTop="@+id/touch_aria_close"
                android:layout_alignEnd="@+id/touch_aria_close"
                android:layout_alignBottom="@+id/touch_aria_close"
...
                android:layout_marginStart="10dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="40dp"
                android:background="@color/ubi4_open_threshold"/>

            <TextView
                android:id="@+id/open_threshold_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignStart="@+id/touch_aria_open"
                android:layout_alignTop="@+id/touch_aria_open"
                android:layout_alignEnd="@+id/touch_aria_open"
                android:layout_alignBottom="@+id/touch_aria_open"
...
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <View
                    android:id="@+id/open_CH_v"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
...
