...
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/sf_pro_display_light"
                android:maxLines="2"
                android:text="@string/setting_description"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@id/widgetSliderNumTv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Текущее значение первого слайдера -->
            <TextView
                android:id="@+id/widgetSliderNumTv"
...
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <View
                    android:id="@+id/minusBtnRipple"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ubi4_ripple_corners"
                    android:clickable="true"
                    android:clipToOutline="true"
                    android:elevation="4dp"
...
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <View
                    android:id="@+id/plusBtnRipple"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ubi4_ripple_corners"
                    android:clickable="true"
                    android:clipToOutline="true"
                    android:elevation="4dp"
...
